--- a/comp/bit_mask/CMakeLists.txt
+++ b/comp/bit_mask/CMakeLists.txt
@@ -1,4 +1,8 @@
-
+################################################################################
+# @file
+# @author      Wynand Marais
+# @copyright   (c) 2020 Wynand Marais, MIT License
+################################################################################
 add_library(hawk_comp_c_bitmask OBJECT c_bit_mask.c)
 target_compile_options(hawk_comp_c_bitmask PRIVATE -O3)
 
